// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with border 1`] = `
<div
  className="NavButton bordered"
>
  <Link
    className="material waves-effect waves-teal btn-flat"
    to="/test"
  >
    <div
      className="link-text"
    >
      Click me
    </div>
  </Link>
</div>
`;

exports[`renders without border 1`] = `
<div
  className="NavButton "
>
  <Link
    className="material waves-effect waves-teal btn-flat"
    to="/test"
  >
    <div
      className="link-text"
    >
      Click me
    </div>
  </Link>
</div>
`;
